[gd_scene load_steps=5 format=3 uid="uid://dhsyim1ws7jr7"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_k501y"]
[ext_resource type="PackedScene" uid="uid://4hc618o25cbk" path="res://background/background.tscn" id="2_nac1h"]
[ext_resource type="PackedScene" uid="uid://bsr7pil8jetlk" path="res://boundary/boundary.tscn" id="3_8gr2b"]
[ext_resource type="AudioStream" uid="uid://dn7jhgksaiha2" path="res://assets/music/airship_remix.ogg" id="4_g2b5c"]

[node name="Game" type="Node2D"]
script = ExtResource("1_k501y")

[node name="Background" parent="." instance=ExtResource("2_nac1h")]
unique_name_in_owner = true
position = Vector2(1611, 1898)
scale = Vector2(1.8, 1.8)

[node name="Boundary" parent="." instance=ExtResource("3_8gr2b")]
unique_name_in_owner = true
position = Vector2(576, 324)
scale = Vector2(1.01163, 1)

[node name="EnemySpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 396.0
offset_top = 276.0
offset_right = 437.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountDownLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "#"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_g2b5c")

[node name="GameOverOverlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverOverlay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = -84.5
offset_right = 195.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 96
alignment = 1

[node name="Label" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 72
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PlayAgainButton" type="Button" parent="GameOverOverlay/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play Again"

[node name="ReturnToMenuButton" type="Button" parent="GameOverOverlay/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Menu"

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="pressed" from="GameOverOverlay/VBoxContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverOverlay/VBoxContainer/VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
